Bug 285844 - Konqueror closed when opening a website
Summary: Konqueror closed when opening a website
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 221981 245290 270467 276169 286067 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-05 18:58 UTC by Ronald Verhaegen
Modified: 2011-11-22 02:21 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
proposed patch (1.45 KB, patch)
2011-11-15 07:32 UTC, Dawit Alemayehu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ronald Verhaegen 2011-11-05 18:58:28 UTC
Application: konqueror (4.7.2 (4.7.2))
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

just started Konqueror and chose another site to go to. The website is ok, np with it in the other browsers I use.  Site was:
www.secondlife.com

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault
[Current thread is 1 (Thread 0xb77c2710 (LWP 2067))]

Thread 3 (Thread 0xb4f4db70 (LWP 2078)):
#0  0x00a88d50 in __pthread_mutex_unlock_usercnt () from /lib/i386-linux-gnu/libpthread.so.0
#1  0x001eff54 in pthread_mutex_unlock () from /lib/i386-linux-gnu/libc.so.6
#2  0x016a3e70 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x016a48f0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x016a4c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x01554b37 in QEventDispatcherGlib::processEvents (this=0x9a946c0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x015251dd in QEventLoop::processEvents (this=0xb4f4d2b0, flags=...) at kernel/qeventloop.cpp:149
#7  0x01525421 in QEventLoop::exec (this=0xb4f4d2b0, flags=...) at kernel/qeventloop.cpp:201
#8  0x0142890b in QThread::exec (this=0x9490e48) at thread/qthread.cpp:498
#9  0x01505e2d in QInotifyFileSystemWatcherEngine::run (this=0x9490e48) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x0142b7b3 in QThreadPrivate::start (arg=0x9490e48) at thread/qthread_unix.cpp:331
#11 0x00a85d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0x001e20ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xb4410b70 (LWP 2080)):
#0  0x00a3ad10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x014827d5 in do_gettime (frac=0xb4410030, sec=0xb4410028) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x015554b6 in QTimerInfoList::updateCurrentTime (this=0x9b530c4) at kernel/qeventdispatcher_unix.cpp:339
#4  0x0155580a in QTimerInfoList::timerWait (this=0x9b530c4, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x01554053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb441013c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x015540ed in timerSourcePrepare (source=0x9b53090, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x016a388c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x016a4637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x016a4c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x01554b37 in QEventDispatcherGlib::processEvents (this=0x9b52d00, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x015251dd in QEventLoop::processEvents (this=0xb44102c0, flags=...) at kernel/qeventloop.cpp:149
#12 0x01525421 in QEventLoop::exec (this=0xb44102c0, flags=...) at kernel/qeventloop.cpp:201
#13 0x0142890b in QThread::exec (this=0x9b5ebc0) at thread/qthread.cpp:498
#14 0x007141df in KIO::NameLookUpThread::run (this=0x9b5ebc0) at ../../kio/kio/hostinfo.cpp:226
#15 0x0142b7b3 in QThreadPrivate::start (arg=0x9b5ebc0) at thread/qthread_unix.cpp:331
#16 0x00a85d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x001e20ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb77c2710 (LWP 2067)):
[KCrash Handler]
#7  0x00ed3a96 in serviceTypes (this=0x0) at ../../../konqueror/src/konqview.h:280
#8  KonqView::supportsMimeType (this=0x0, mimeType=...) at ../../../konqueror/src/konqview.cpp:1240
#9  0x00ed6137 in KonqView::showsDirectory (this=0x0) at ../../../konqueror/src/konqview.cpp:1393
#10 0x00ed0bf3 in KonqRun::tryOpenView (this=0x94ec3a0, mimeType=..., associatedAppIsKonqueror=false) at ../../../konqueror/src/konqrun.cpp:156
#11 0x00ed0cbc in KonqRun::foundMimeType (this=0x94ec3a0, _type=...) at ../../../konqueror/src/konqrun.cpp:92
#12 0x006bda8f in KRun::mimeTypeDetermined (this=0x94ec3a0, mimeType=...) at ../../kio/kio/krun.cpp:1433
#13 0x002f098b in KParts::BrowserRun::slotBrowserMimetype (this=0x94ec3a0, _job=0x9b94ed0, type=...) at ../../kparts/browserrun.cpp:245
#14 0x002f0ea4 in KParts::BrowserRun::qt_metacall (this=0x94ec3a0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfe3ce04) at ./browserrun.moc:80
#15 0x00ed1502 in KonqRun::qt_metacall (this=0x94ec3a0, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbfe3ce04) at ./konqrun.moc:69
#16 0x0152cb7d in metacall (argv=0xbfe3ce04, idx=12, cl=QMetaObject::InvokeMetaMethod, object=0x94ec3a0) at kernel/qmetaobject.cpp:237
#17 QMetaObject::metacall (object=0x94ec3a0, cl=QMetaObject::InvokeMetaMethod, idx=12, argv=0xbfe3ce04) at kernel/qmetaobject.cpp:232
#18 0x0153ba6a in QMetaObject::activate (sender=0x9b94ed0, m=0x82360c, local_signal_index=4, argv=0xbfe3ce04) at kernel/qobject.cpp:3278
#19 0x0064e6cd in KIO::TransferJob::mimetype (this=0x9b94ed0, _t1=0x9b94ed0, _t2=...) at ./jobclasses.moc:419
#20 0x0064e738 in KIO::TransferJob::slotMimetype (this=0x9b94ed0, type=...) at ../../kio/kio/job.cpp:1180
#21 0x006508eb in KIO::TransferJob::qt_metacall (this=0x9b94ed0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfe3cf88) at ./jobclasses.moc:372
#22 0x0152cb7d in metacall (argv=0xbfe3cf88, idx=50, cl=QMetaObject::InvokeMetaMethod, object=0x9b94ed0) at kernel/qmetaobject.cpp:237
#23 QMetaObject::metacall (object=0x9b94ed0, cl=QMetaObject::InvokeMetaMethod, idx=50, argv=0xbfe3cf88) at kernel/qmetaobject.cpp:232
#24 0x0153ba6a in QMetaObject::activate (sender=0x9b97a18, m=0x8256a0, local_signal_index=19, argv=0xbfe3cf88) at kernel/qobject.cpp:3278
#25 0x00705d35 in KIO::SlaveInterface::mimeType (this=0x9b97a18, _t1=...) at ./slaveinterface.moc:273
#26 0x0070857b in KIO::SlaveInterface::dispatch (this=0x9b97a18, _cmd=21, rawdata=...) at ../../kio/kio/slaveinterface.cpp:267
#27 0x00704c5a in KIO::SlaveInterface::dispatch (this=0x9b97a18) at ../../kio/kio/slaveinterface.cpp:88
#28 0x006f6348 in KIO::Slave::gotInput (this=0x9b97a18) at ../../kio/kio/slave.cpp:344
#29 0x006f6bbc in KIO::Slave::qt_metacall (this=0x9b97a18, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfe3d234) at ./slave.moc:82
#30 0x0152cb7d in metacall (argv=0xbfe3d234, idx=30, cl=QMetaObject::InvokeMetaMethod, object=0x9b97a18) at kernel/qmetaobject.cpp:237
#31 QMetaObject::metacall (object=0x9b97a18, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfe3d234) at kernel/qmetaobject.cpp:232
#32 0x0153ba6a in QMetaObject::activate (sender=0x9b9fb98, m=0x822508, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3278
#33 0x00614f65 in KIO::Connection::readyRead (this=0x9b9fb98) at ./connection.moc:92
#34 0x0061579a in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#35 KIO::ConnectionPrivate::dequeue (this=0x9baab18) at ../../kio/kio/connection.cpp:71
#36 0x0061586f in KIO::Connection::qt_metacall (this=0x9b9fb98, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x9bb53d8) at ./connection.moc:79
#37 0x0152cb7d in metacall (argv=0x9bb53d8, idx=5, cl=QMetaObject::InvokeMetaMethod, object=0x9b9fb98) at kernel/qmetaobject.cpp:237
#38 QMetaObject::metacall (object=0x9b9fb98, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x9bb53d8) at kernel/qmetaobject.cpp:232
#39 0x01537685 in QMetaCallEvent::placeMetaCall (this=0x9badca0, object=0x9b9fb98) at kernel/qobject.cpp:535
#40 0x0153eb52 in QObject::event (this=0x9b9fb98, e=0x9badca0) at kernel/qobject.cpp:1217
#41 0x03214d54 in notify_helper (e=0x9badca0, receiver=0x9b9fb98, this=0x945f5a8) at kernel/qapplication.cpp:4486
#42 QApplicationPrivate::notify_helper (this=0x945f5a8, receiver=0x9b9fb98, e=0x9badca0) at kernel/qapplication.cpp:4458
#43 0x0321a103 in QApplication::notify (this=0x9badca0, receiver=0x9b9fb98, e=0x9badca0) at kernel/qapplication.cpp:3886
#44 0x0116e681 in KApplication::notify (this=0xbfe3dadc, receiver=0x9b9fb98, event=0x9badca0) at ../../kdeui/kernel/kapplication.cpp:311
#45 0x0152619e in QCoreApplication::notifyInternal (this=0xbfe3dadc, receiver=0x9b9fb98, event=0x9badca0) at kernel/qcoreapplication.cpp:787
#46 0x01529f93 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#47 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9440520) at kernel/qcoreapplication.cpp:1428
#48 0x0152a0ec in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#49 0x015546a4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#50 postEventSourceDispatch (s=0x945fb68) at kernel/qeventdispatcher_glib.cpp:277
#51 0x016a425f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#52 0x016a4990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#53 0x016a4c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#54 0x01554ada in QEventDispatcherGlib::processEvents (this=0x9441230, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#55 0x032cce3a in QGuiEventDispatcherGlib::processEvents (this=0x9441230, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#56 0x015251dd in QEventLoop::processEvents (this=0xbfe3d964, flags=...) at kernel/qeventloop.cpp:149
#57 0x01525421 in QEventLoop::exec (this=0xbfe3d964, flags=...) at kernel/qeventloop.cpp:201
#58 0x0152a19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#59 0x032128f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#60 0x00f58bf5 in kdemain (argc=2, argv=0xbfe3de34) at ../../../konqueror/src/konqmain.cpp:242
#61 0x0804850b in main (argc=2, argv=0xbfe3de34) at konqueror_dummy.cpp:3

Possible duplicates by query: bug 272991, bug 266373.

Reported using DrKonqi
Comment 1 Dawit Alemayehu 2011-11-15 07:16:01 UTC
*** Bug 286067 has been marked as a duplicate of this bug. ***
Comment 2 Dawit Alemayehu 2011-11-15 07:32:47 UTC
Created attachment 65690 [details]
proposed patch
Comment 3 Dawit Alemayehu 2011-11-17 23:22:04 UTC
Git commit 96901c51997391b7f6bbe6ea3421b1beb140ea6d by Dawit Alemayehu.
Committed on 15/11/2011 at 08:29.
Pushed by adawit into branch 'KDE/4.7'.

Check for NULL before accessing the pointer.

BUG: 285844
FIXED-IN: 4.7.4
REVIEW: 103176

M  +1    -1    konqueror/src/konqrun.cpp

http://commits.kde.org/kde-baseapps/96901c51997391b7f6bbe6ea3421b1beb140ea6d
Comment 4 Dawit Alemayehu 2011-11-17 23:23:58 UTC
Git commit 71f64e29a072a0da13e1de6cb3f5a10257f9a164 by Dawit Alemayehu.
Committed on 15/11/2011 at 08:29.
Pushed by adawit into branch 'master'.

Check for NULL before accessing the pointer.

BUG: 285844
FIXED-IN: 4.7.4
REVIEW: 103176

(cherry picked from commit 96901c51997391b7f6bbe6ea3421b1beb140ea6d)

M  +1    -1    konqueror/src/konqrun.cpp

http://commits.kde.org/kde-baseapps/71f64e29a072a0da13e1de6cb3f5a10257f9a164
Comment 5 Dawit Alemayehu 2011-11-18 00:27:15 UTC
*** Bug 221981 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2011-11-22 01:14:29 UTC
*** Bug 270467 has been marked as a duplicate of this bug. ***
Comment 7 Dawit Alemayehu 2011-11-22 01:14:50 UTC
*** Bug 276169 has been marked as a duplicate of this bug. ***
Comment 8 Dawit Alemayehu 2011-11-22 02:21:30 UTC
*** Bug 245290 has been marked as a duplicate of this bug. ***