Check for NULL before accessing the pointer.

BUG: 285844
FIXED-IN: 4.7.4
REVIEW: 103176

(cherry picked from commit 96901c51997391b7f6bbe6ea3421b1beb140ea6d)